Add main header

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1 class="main-header">Etch-a-Sketch</h1>
+  </body>
 </html>
