Create grid size button in HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1 class="main-header">Etch-a-Sketch</h1>
-    <div class="grid-container"></div>
+    <div class="main-container">
+      <button class="grid-size-btn">Set grid size</button>
+      <div class="grid-container"></div>
+    </div>
   </body>
 </html>
