Leave just the grid size button

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <body>
     <h1 class="main-header">Etch-a-Sketch</h1>
     <div class="main-container">
-      <div class="set-grid-size">
-        <p class="grid-size-text">Set grid size (max: 100)</p>
-        <input class="grid-size-field" type="text" />
-        <button class="grid-size-btn">Set</button>
-      </div>
+      <button class="grid-size-btn">Set grid size</button>
       <div class="grid-container"></div>
     </div>
   </body>
