Change button class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1 class="main-header">Etch-a-Sketch</h1>
     <div class="main-container">
-      <button class="grid-size-btn">Set grid size</button>
+      <button class="grid-size-btn button">Set grid size</button>
       <div class="grid-container"></div>
     </div>
   </body>
