--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1 class="main-header">Etch-a-Sketch</h1>
     <div class="main-container">
+      <button class="button">Clear grid</button>
       <button class="grid-size-btn button">Set grid size</button>
       <div class="grid-container"></div>
     </div>
