--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <h1 class="main-header">Etch-a-Sketch</h1>
     <div class="main-container">
-      <button class="clear-grid-btn button">Clear grid</button>
-      <button class="grid-size-btn button">Set grid size</button>
+      <div class="btn-container">
+        <button class="clear-grid-btn button">Clear grid</button>
+        <button class="grid-size-btn button">Set grid size</button>
+      </div>
       <div class="grid-container"></div>
     </div>
   </body>
