Set up basic structure for rainbow paint

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="btn-container">
         <button class="clear-grid-btn button">Clear grid</button>
         <button class="grid-size-btn button">Set grid size</button>
+        <button class="rainbow-btn button">Rainbow mode</button>
       </div>
       <div class="grid-container"></div>
     </div>
